5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1635_2442.log
== TEST (2019-04-08 14:14:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	mensagem = "Par"
else
	mensagem = "Impar"

print(mensagem)

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:21:02) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0)
	print("Par")
else
	print("Impar")

-- ERROR:
File "XXXX", line 7
    if (num % 2 == 0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:21:59) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:22:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- EXECUTION TIME:
0.198812
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2442/main.py", line 7, in <module>
    if (num % 2 == 0):
TypeError: not all arguments converted during string formatting

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:22:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:24:53) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 0):
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:25:05) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 2):
	print("Par")
else:
	print("Impar")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (num % 2 == 2):
TypeError: not all arguments converted during string formatting
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:25:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 => 2):
	print("Par")
else:
	print("Impar")

-- ERROR:
File "XXXX", line 7
    if (num % 2 => 2):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:25:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.

num = input("Digite um numero: ")

if (num % 2 == 2):
	print("Par")
else:
	print("Impar")

-- EXECUTION TIME:
0.165415
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2442/main.py", line 7, in <module>
    if (num % 2 == 2):
TypeError: not all arguments converted during string formatting

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:29:20) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:29:26) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- EXECUTION TIME:
0.159242
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:29:31) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- EXECUTION TIME:
0.198912
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:29:34) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- EXECUTION TIME:
0.137629
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:29:38) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:29:51) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- EXECUTION TIME:
0.208073
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:38:18) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:41:51) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:44:24) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	print("Par")
else:
	print("Impar")

-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:11:56) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mesagem("Par")
else:
	mesagem("Impar")

print(mesagem)
-- EXECUTION TIME:
0.144136
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2442/main.py", line 6, in <module>
    mesagem("Impar")
NameError: name 'mesagem' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:11:57) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mesagem("Par")
else:
	mesagem("Impar")

print(mesagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    mesagem("Impar")
NameError: name 'mesagem' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 14:12:29) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mesagem = "Par"
else:
	mesagem= "Impar"

print(mesagem)
-- OUTPUT:
Impar
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:12:35) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mesagem = "Par"
else:
	mesagem= "Impar"

print(mesagem)
-- EXECUTION TIME:
0.114248
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:12:38) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mesagem = "Par"
else:
	mesagem= "Impar"

print(mesagem)
-- EXECUTION TIME:
0.209193
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
Impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
Par
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 14:13:03) 
-- CODE:
num = int(input("Digite um numero: "))

if (num % 2 == 0):
	mesagem = "par"
else:
	mesagem= "impar"

print(mesagem)
-- EXECUTION TIME:
0.127625
-- TEST CASE 1:
---- input:
55
---- correct output:
impar
---- user output:
impar
-- TEST CASE 3:
---- input:
842
---- correct output:
par
---- user output:
par
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
